# transaction-analysis

./: .gitignore  LICENSE.txt  main.py  pyproject.toml
src/: processor.py  reports.py  services.py  utils.py
templates/: index.html
